k8s-manifests/k8s-apache2-istio/apache2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
  namespace: apache2
spec:
  selector:
    matchLabels:
      app: apache2
  replicas: 1
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2
        image: httpd:2.4.48
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apache2-index-file
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: apache2-index-file
        configMap:
          name: index-html-configmap


---
apiVersion: v1
kind: Service
metadata:
  labels:
     app: apache2
  name: apache2-service
  namespace: apache2
spec:
  selector:
    app: apache2
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
